commit routin-module account

--- a/src/app/pages/account/account.component.html
+++ b/src/app/pages/account/account.component.html
@@ -1,4 +1,13 @@
 
-<p>account works!</p>
-<router-outlet></router-outlet>
+<div
+  class="relative overflow-hidden  bg-cover bg-no-repeat h-full w-full  "  style="background-image: url('assets/images/bg-account.jpg');">
+  <div
+  class="absolute bottom-0 left-0 right-0 top-0 h-full w-full overflow-hidden bg-fixed"
+  style="background-color: rgba(0, 0, 0, 0.8)">
+
+
+  <router-outlet></router-outlet>
+  </div>
+</div>
+
 
