--- a/src/app/ui/input/input.component.html
+++ b/src/app/ui/input/input.component.html
@@ -1,1 +1,10 @@
-<p>input works!</p>
+<label class="form-control w-full max-w-xs">
+  <div class="label">
+  </div>
+  <input type="{{type}}" placeholder="{{placeHolder}}" class="input input-bordered bg-white  w-full max-w-xs" />
+  <div class="label">
+
+    <!-- <span class="label-text-alt text-errorColor">Bottom Right label</span> -->
+  </div>
+</label>
+
