--- a/src/app/ui/button/button.component.html
+++ b/src/app/ui/button/button.component.html
@@ -1,1 +1,7 @@
-<p>button works!</p>
+<button
+class="bg-blueLight text-white py-2 rounded-xl hover:scale-105 p-6 duration-300 hover:bg-blueHover font-medium w-full"
+type="submit"
+
+>
+{{name}}
+</button>
