--- a/src/app/pages/account/login/user-login.component.html
+++ b/src/app/pages/account/login/user-login.component.html
@@ -26,7 +26,7 @@
             inputId="password"
           ></app-input>
         </div>
-
+        <span>{{errorMessage}}</span>
         <app-button name="ورود" type="submit"> </app-button>
       </form>
       <div class="mt-6 items-center text-gray-100">
