--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
+<!-- <div class=" bg-light-background text-light-text dark:bg-dark-background dark:text-dark-text">
+  <button (click)="toggleTheme()">Toggle Theme</button>
 
+</div> -->
 <router-outlet></router-outlet>
 
 
