--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,6 +41,17 @@
 body{
   font-family: Vazirmatn;
 }
+body.light {
+  background-color: #ffffff;
+  color: #000000;
+}
+
+body.dark {
+  background-color: #000000;
+  color: #ffffff;
+}
+
+
 
 
 
