--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -7,13 +7,10 @@
 .example-sidenav-content {
   display: flex;
   height: 100%;
-  align-items: center;
-  justify-content: center;
+  width: 100vw;
+
 }
 
 .example-sidenav {
   padding: 20px;
-}
-.example-spacer {
-  flex: 1 1 auto;
 }
