--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,30 +1,17 @@
 <mat-drawer-container class="example-container" autosize>
-  <mat-drawer #drawer class="example-sidenav" mode="side">
-    <p>Auto-resizing sidenav</p>
-    <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
-    <button (click)="showFiller = !showFiller" mat-raised-button>
-      Toggle extra text
-    </button>
+  <mat-drawer #drawer class="example-sidenav" mode="side" [opened]="showSidebar">
+    <h1>Company Name</h1>
+    <ul>
+      <app-menu-sidebar *ngFor="let menu of menus" [menu]="menu"></app-menu-sidebar>
+    </ul>
   </mat-drawer>
 
   <div class="example-sidenav-content">
-    <app-header></app-header>
-    <mat-toolbar color="primary">
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="drawer.toggle()" >
-        <mat-icon>menu</mat-icon>
-      </button>
-      <span>My App</span>
-      <span class="example-spacer"></span>
-      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-        <mat-icon>favorite</mat-icon>
-      </button>
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-        <mat-icon>share</mat-icon>
-      </button>
-    </mat-toolbar>
-    <!-- <button type="button" mat-button (click)="drawer.toggle()">
-      Toggle sidenav
-    </button> -->
+    <app-header class="example-spacer" (sideToggle)="toggleSideBar()"></app-header>
+    <div class="main-content">
+      <router-outlet class="main-content"></router-outlet>
+    </div>
+
   </div>
 
 </mat-drawer-container>
