--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -1,16 +1,20 @@
 .example-container {
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 .example-sidenav-content {
-  display: flex;
   height: 100%;
-  width: 100vw;
-
 }
 
 .example-sidenav {
   padding: 20px;
+}
+.example-spacer {
+  flex: 1 1 auto;
+}
+.main-content{
+  padding: 5px 10px;
+  margin: 15px;
 }
