--- a/src/app/layout/sidebar/menu-sidebar/menu-sidebar.component.scss
+++ b/src/app/layout/sidebar/menu-sidebar/menu-sidebar.component.scss
@@ -1,3 +1,23 @@
 .active-item{
-  background-color: cadetblue;
+  background-color:#3F51B5;
+  color: white;
+  transition: all ;
+  transition-duration: 400ms;
+}
+.example-action-buttons {
+  padding-bottom: 20px;
+}
+
+.example-headers-align .mat-expansion-panel-header-description {
+  justify-content: space-between;
+  align-items: center;
+}
+
+.example-headers-align .mat-mdc-form-field + .mat-mdc-form-field {
+  margin-left: 8px;
+}
+.mat-expansion-panel-header span{
+
+  border-color: black;
+
 }
