--- a/src/app/pages/main/users/create/create.component.html
+++ b/src/app/pages/main/users/create/create.component.html
@@ -1,1 +1,35 @@
-<p>create works!</p>
+<mat-stepper linear #stepper>
+  <mat-step [stepControl]="firstFormGroup" [editable]="isEditable">
+    <form [formGroup]="firstFormGroup" (submit)="save()">
+      <ng-template matStepLabel>مشخصات فردی</ng-template>
+      <app-personal-user [customForm]="firstFormGroup"></app-personal-user>
+
+      <div>
+        <button mat-button matStepperNext >Next</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step [stepControl]="secondFormGroup" [editable]="isEditable">
+    <form [formGroup]="secondFormGroup">
+      <ng-template matStepLabel>مشخصات آدرس</ng-template>
+
+      <div>
+        <button mat-button matStepperPrevious>Back</button>
+        <button mat-button matStepperNext>Next</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step>
+    <ng-template matStepLabel>اطلاعات تکمیلی</ng-template>
+    <div>
+      <button mat-button matStepperPrevious>Back</button>
+      <button mat-button (click)="stepper.reset()">Reset</button>
+    </div>
+  </mat-step>
+</mat-stepper>
+
+<!-- <mat-form-field>
+        <mat-label>Address</mat-label>
+        <input matInput formControlName="secondCtrl" placeholder="Ex. 1 Main St, New York, NY"
+               required>
+      </mat-form-field> -->
