--- a/src/app/ui/input/input.component.html
+++ b/src/app/ui/input/input.component.html
@@ -1,9 +1,9 @@
-<label class="form-control w-full max-w-xs">
+<label class="form-control w-full ">
   <div class="label"></div>
   <input
     type="{{type}}"
     placeholder="{{placeHolder}}"
-    class="input input-bordered bg-white w-full max-w-xs"
+    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
     [ngClass]="{'border-errorColor': control.invalid && control.touched,'input-bordered border-colorSuccess': control.valid && control.touched}"
     [formControl]="control"
     id="inputId"
